--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,10 @@
   "compilerOptions": {
     "module": "commonjs", //nodejs와 import, export 사용을 위한 옵션
     "target": "ES2015", //컴파일 하고 싶은 js의 버전
-    "sourceMap": true //sourcemap 처리를 하는지
+    "sourceMap": true, //sourcemap 처리를 하는지
+    "outDir": "dist" //compile된 결과물의 경로
   },
-  "include": ["index.ts"],
+  "include": ["src/**/*"], //compile은 src안에 해준다
   "exclude": ["node_modules"] /*어떤 파일이 컴파일 과정에 포함되는지 명시
                 컴파일 과정에서 포함할 파일의 배열을 적는다*/
 }
