--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jsky119/ts-chain#readme",
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "tsc-watch": "^4.5.0",
     "typescript": "^4.5.2"
   }
